--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -1,1 +1,10 @@
 @import 'variables';
+.card-courses-item {
+    margin-top: 16px;
+}
+.user-avatar {
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    margin-right: 8px;
+}
