--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,22 @@
-<h1>Home Page</h1>
+<div class="mt4">
+    <div class="row">
+
+        {{#each courses}}
+       <div class="col-sm-6 col-lg-4">
+           <div class="card card-courses-item" style="width: 18rem;">
+               <a href="/courses/{{this.slug}}">
+              <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
+               </a>
+               <div class="card-body">
+                   <a href="/courses/{{this.slug}}">
+                   <h5 class="card-title">{{this.name}}</h5>
+                   </a> 
+                   <p class="card-text">{{this.description}}</p>
+                   <a href="#" class="btn btn-primary">Buy course</a>
+                </div>
+           </div>
+        </div> 
+        {{/each}}
+   </div>
+</div>
+               
